--- a/views/question.erb
+++ b/views/question.erb
@@ -1,4 +1,4 @@
-<% if @empty %>
+<% if true %>
   <form action="/upload-csv" method="post" enctype="multipart/form-data">
     <div class="field">
       <div id="file-js-example" class="file is-centered is-boxed is-info has-name">
