--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-html, body {
-    overflow-y: hidden;
-}
-
 .resize-logo {
     min-height: 50px !important;
 }
@@ -42,5 +38,13 @@ html, body {
 
 .is-white{
     background-color: white;
+}
+
+.question-width {
+    width: 35em;
+}
+
+.footer {
+    padding: 3rem 1.5rem 3rem;
 }
 
