Project files updated

--- a/views/template.erb
+++ b/views/template.erb
@@ -43,12 +43,12 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <button class="button is-primary">
-            <span class="icon">
-              <i class="fab fa-github"></i>
-            </span>
+            <a class="button is-primary" href="https://github.com/FelipeOsornio/QuizApp" target="_blank">
+              <span class="icon">
+                <i class="fab fa-github"></i>
+              </span>
               <span>GitHub</span>
-            </button>
+            </a>
           </div>
         </div>
       </div>
