implementing get feedback

--- a/views/template.erb
+++ b/views/template.erb
@@ -10,7 +10,6 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script type="text/javascript" src="/js/burger-navbar.js"></script>
-  <script type="text/javascript" src="/js/file-name.js"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
   <link rel="stylesheet" href="/css/style.css">
@@ -32,15 +31,22 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/login">
-          Manage questions
-        </a>
-        <a class="navbar-item">
+        <a class="navbar-item" href="/start-quiz">
           Quiz app
         </a>
       </div>
 
       <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-info" href="https://github.com/FelipeOsornio/QuizApp" target="_blank">
+              <span class="icon">
+                <i class="fas fa-user-astronaut"></i>
+              </span>
+              <span>Login</span>
+            </a>
+          </div>
+        </div>
         <div class="navbar-item">
           <div class="buttons">
             <a class="button is-primary" href="https://github.com/FelipeOsornio/QuizApp" target="_blank">
