--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,14 @@
     margin: 1em 0;
 }
 
+.margin-bottom {
+    margin-bottom: 0.3em !important;
+}
+
+.question-margin {
+    margin: 0.3em !important;
+}
+
 .is-xlarge {
     min-height: calc(78vh - 3.25rem);
 }
@@ -36,7 +44,7 @@
     box-shadow: 0 -2px 0 0 #f5f5f5;
 }
 
-.is-white{
+.is-white {
     background-color: white;
 }
 
@@ -47,4 +55,70 @@
 .footer {
     padding: 3rem 1.5rem 3rem;
 }
+
+.tile-width {
+    width: 80%;
+}
+
+.is-bold {
+    font-weight: bold;
+}
+
+/* Check box code taken of W3School  */
+
+/* Container */
+.input-container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.input-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 27px;
+    width: 27px;
+    background-color: #eee;
+    border-radius: 50%;
+    margin-top: 3px;
+}
+
+/* On mouse-over, add a grey background color */
+.input-container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.input-container input:checked ~ .checkmark {
+    background-color: hsl(48, 100%, 67%);
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.input-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
 
