class quiz_app created

--- a/views/template.erb
+++ b/views/template.erb
@@ -39,7 +39,7 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-info" href="https://github.com/FelipeOsornio/QuizApp" target="_blank">
+            <a class="button is-info" href="/login" target="_blank">
               <span class="icon">
                 <i class="fas fa-user-astronaut"></i>
               </span>
