--- a/views/session.erb
+++ b/views/session.erb
@@ -39,11 +39,11 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-info" href="/login">
+            <a class="button is-info" href="/">
               <span class="icon">
-                <i class="fas fa-user-astronaut"></i>
+                <i class="fas fa-sign-out-alt"></i>
               </span>
-              <span>Login</span>
+              <span>Logout</span>
             </a>
           </div>
         </div>
