--- a/views/table.erb
+++ b/views/table.erb
@@ -1,31 +1,41 @@
-<table class="table is-fullwidth">
-  <thead>
-  <tr>
-    <th>Question</th>
-    <th>Option A</th>
-    <th>Option B</th>
-    <th>Option C</th>
-    <th>Option D</th>
-    <th>Answer</th>
-  </tr>
-  </thead>
-  <tbody>
-
-  <% @questions.each do |question| %>
-
+<div>
+  <table class="table is-fullwidth">
+    <thead>
     <tr>
-      <td class="question-width"><%= question['Question'] %></td>
-
-      <% question['Options'].each do |option| %>
-
-        <td><%= option %></td>
-
-      <% end %>
-
-      <td><%= question['Options'][question['Answer']] %></td>
+      <th>Question</th>
+      <th>Option A</th>
+      <th>Option B</th>
+      <th>Option C</th>
+      <th>Option D</th>
+      <th>Answer</th>
     </tr>
+    </thead>
+    <tbody>
 
-  <% end %>
+    <% @questions.each do |question| %>
 
-  </tbody>
-</table>
+      <tr>
+        <td class="question-width"><%= question['Question'] %></td>
+
+        <% question['Options'].each do |option| %>
+
+          <td><%= option %></td>
+
+        <% end %>
+
+        <td><%= question['Options'][question['Answer']] %></td>
+      </tr>
+
+    <% end %>
+
+    </tbody>
+
+  </table>
+
+    <div class="field is-grouped is-grouped-right">
+      <p class="control">
+        <a href="/delete-questions" type="submit" class="button is-danger">Delete all questions</a>
+      </p>
+    </div>
+
+</div>
