--- a/src/views/feedback.erb
+++ b/src/views/feedback.erb
@@ -9,11 +9,11 @@
           <p class="title margin-bottom is-3">Question <%= idx + 1 %></p>
           <p class="subtitle question-margin"><%= question.question %></p>
           <div class="margin-horizontal">
-            <p class="title margin-bottom is-3">Answer</p>
+            <p class="title margin-bottom is-3">Your answer</p>
             <p class="subtitle question-margin"><%= question.options[@user_answer[idx].to_i] %></p>
           </div>
           <div class="margin-horizontal">
-            <p class="title margin-bottom is-3">Correct</p>
+            <p class="title margin-bottom is-3">Correct answer</p>
             <p class="subtitle question-margin"><%= question.options[question.answer] %></p>
           </div>
         </div>
