--- a/src/views/session.erb
+++ b/src/views/session.erb
@@ -53,7 +53,7 @@
               <span class="icon">
                 <i class="fab fa-github"></i>
               </span>
-              <span>GitHub</span>
+              <span>Repository</span>
             </a>
           </div>
         </div>
